1.68
-----------------
Move cal and merit trending back to chunk level (can't trend gappy data).
Include delivery ID in messages logging alarms.
Reserve (not just require) scratch space.
Don't retry cleanupCrumbs.
Don't retire runs that have merging trouble.
-------------------------------------------


1.67
-----------------
Port scratch cleanup scripts from SVAC pipeline, Use a wrapper that cleans up scratch before and after main job.
Move cal (aka digi long) and merit monitoring to run level.
Fix FILENAME keyword in ft1 and ls1.
Be more verbose when testing chunks.
Use run number as stream id for cleanupCompleteRun.
Increase free scratch required for recon, svac, cal, digi merges.
-------------------------------------------


1.66
-----------------
Set 0 retries on findChunks, findChunksLci, getTimes, getTimesInc.
Alarms for FastMon errors, acdPeds, calGains, calPeds. [LONE-111@JIRA], [LONE-107@JIRA]
Remove some cruft.
Keep 1-second ft2 FITS file (ft2Seconds).
Run gtmktime to make ft1/ls1 GTIs match gaps from ft2. [LONE-78@JIRA]
Stage files from AFS buffers to scratch disk.
Use new version of GPLtools which checksums files as they are copied.
-------------------------------------------


1.65
-----------------
Use autoRetryMaxAttempts="1" for all processes.
Don't merge recon for InProgress runs [LONE-109].
Fix time order check for <1s chunks.
-------------------------------------------


1.64
-----------------
GR v15r40 (containing SC alignment, among others).
Tkr alignment and SC aligment are back in recon JO.
Move svacTuple to chunk level. [LONE-110@JIRA]
Alarms on FastMon errors (not in main task yet). [LONE-111@JIRA]
Start work on not merging recon on InProgress runs (not in main task yet). [LONE-109@JIRA]
-------------------------------------------


1.63
-----------------
Add alarms on calHist. [LONE-107@JIRA]
In test mode only, acqQuery.runTimes returns values supplied by halfpipe if
run is not in ACQSUMMARY.
Always use prod L0 archive to make magic7.